--- a/test/game/templates/display.html
+++ b/test/game/templates/display.html
@@ -7,6 +7,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
 
     <title>test - phina.js</title>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/r71/three.js'></script>
   </head>
   <body>
     <canvas id='world' width='640' height='960'></canvas>
