--- a/test/game/templates/display.html
+++ b/test/game/templates/display.html
@@ -9,6 +9,7 @@
 
     <title>test - phina.js</title>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/r71/three.js'></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/stats.js/r14/Stats.js"></script>
   </head>
   <body>
     <canvas id='world'></canvas>
@@ -41,6 +42,11 @@ window.onload = function() {
   init();
 };
 
+// Stats
+var stats = new Stats();
+document.body.appendChild(stats.domElement);
+
+
 var init = function() {
   var app = phina.display.CanvasApp({
     query:'#world',
@@ -59,6 +65,11 @@ phina.define('MainScene', {
     });
 
 {{code}}
+  },
+
+  update: function() {
+    stats.end();
+    stats.begin();
   },
 });
 
