--- a/test/game/templates/display.html
+++ b/test/game/templates/display.html
@@ -9,6 +9,8 @@
 
     <title>test - phina.js</title>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/r71/three.js'></script>
+    <!-- box2d -->
+    <script src='http://cdn.rawgit.com/phi-jp/box2dweb/04f6e9eafdecce1c9d5cc312bb9c6b5c2a868993/Box2D.js'></script>
   </head>
   <body>
     <canvas id='world'></canvas>
