CanvasScene -> DisplayScene, CanvasElement -> DisplayElement

--- a/test/game/templates/display.html
+++ b/test/game/templates/display.html
@@ -55,7 +55,7 @@ var init = function() {
 };
 
 phina.define('MainScene', {
-  superClass: 'phina.display.CanvasScene',
+  superClass: 'phina.display.DisplayScene',
   init: function() {
     this.superInit({
       width: 640,
