--- a/test/game/templates/display.html
+++ b/test/game/templates/display.html
@@ -55,7 +55,7 @@ phina.define('MainScene', {
 phina.main(function() {
   var app = phina.game.GameApp({
     query:'#world',
-
+    debug: true,
   });
   var scene = MainScene();
   app.replaceScene(scene);
